tests/gen-derivation/derivation/core/norec t-pi->.. noext 002/expected
1/2: Building RunDerivedGen (RunDerivedGen.idr)
2/2: Building DerivedGen (DerivedGen.idr)
Error: While processing right hand side of checkedGen. Error during reflection: Target types with implicit type parameters are not supported yet

DerivedGen:10:43--10:48
 06 | 
 07 | %language ElabReflection
 08 | 
 09 | export
 10 | checkedGen : Fuel -> (a, b : Nat) -> Gen0 (a = b)
                                                ^^^^^

